# XR1ControllerROS

./: CMakeLists.txt  README.md  launch_vrep.sh  package.xml  xr1_para.xr1para
V-REP/: AUTO_SAVED_INSTANCE_1.ttt  XR1_Ginger.ttt  XR1_vrep.sh  b0_bubbleRob  b0_graph_console  b0_graph_console_gui  b0_log_console_gui  b0_logger_console  b0_resolver  credits.txt  libOpenMeshCore.so.3.3  libOpenMeshTools.so.3.3
V-REP/BlueWorkforce/modelScripts/v1/: locationFrame_customization.lua
V-REP/models/other/: v_repModelThumbnails.ttmt
V-REP/models/people/: v_repModelThumbnails.ttmt
V-REP/models/robots/: v_repModelThumbnails.ttmt
V-REP/models/robots/mobile/: v_repModelThumbnails.ttmt
V-REP/models/robots/non-mobile/: v_repModelThumbnails.ttmt
V-REP/models/tools/: v_repModelThumbnails.ttmt
V-REP/programming/common/: v_repLib.cpp
V-REP/scenes/: Ginger.ttt  MetalGear.ttt  XR1_Vanilla.ttt
V-REP/system/: defaultCustomizationScript.txt  dltcscpt.txt  usrset.txt
XR1ControllerPM_build/: CMakeCache.txt  IKsolver.h  Makefile  XR1ControllerPM.cbp  chaincontroller.h  cmake_install.cmake  dynamicmethod.h  genericcontroller.h  handcontroller.h  libXR1ControllerPM.so.1  libXR1ControllerPM.so.1.0.0  omnicontroller.h  xr1controllerpm.h  xr1controllerpm_global.h  xr1define.h
include/xr1controllerros/: XR1ControllerROS.h
msg/: ArmMsgs.msg  BatteryState.msg  BodyMsgs.msg  ChainModeChange.msg  DropCollision.msg  HandMsgs.msg  HeadMsgs.msg  IK_msg.msg  JointAngles.msg  JointAttributeMsgs.msg  JointVisualization.msg  ShutdownEvent.msg  Temperature.msg  Ultrasonic.msg  WheelMsg.msg
src/: Drawing_Vel.cpp  IK_Example.cpp
src/xr1controllerros/: XR1ControllerROS.cpp
